// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineDatum 1`] = `
.c0 {
  fill: none;
  stroke: rgb(0,0,0);
  stroke-width: 2;
}

<path
  class="line-path foo c0"
  d="M0"
  stroke-width="2"
/>
`;

exports[`LineDatum 2`] = `
.c0 {
  fill: rgb(255,255,255);
  stroke: rgb(0,0,0);
  stroke-width: 2;
}

<g
  class="line-dot-group"
>
  <circle
    class="foo c0"
    cx="0"
    cy="0"
    r="5"
    stroke-width="2"
  />
</g>
`;

exports[`LineDatum 3`] = `
<circle
  class="sc-bwzfXH foo dKsgWe"
  cx="0"
  cy="0"
  r="5"
  stroke-width="2"
/>
`;
